--- a/loadie-support/build.gradle
+++ b/loadie-support/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'signing'
 
 android {
     compileSdkVersion 24
@@ -23,8 +26,10 @@ android {
 
 dependencies {
     compile project(':loadie')
-    compile 'com.android.support:support-compat:24.2.0'
+    compile 'com.android.support:support-compat:24.2.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.31-beta'
     testCompile "org.robolectric:robolectric:3.1.2"
 }
+
+apply from: '../publish.gradle'
