--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-rc1'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
     }
@@ -13,8 +13,8 @@ allprojects {
     repositories {
         jcenter()
     }
-    group='me.tatarka.loadie'
-    version='0.1'
+    group="me.tatarka.loadie"
+    version="0.2"
 }
 
 task clean(type: Delete) {
